crates/planarc/tree-sitter-pdl/test/corpus/node.txt
==================
Node with multiple definitions
==================

node Service1 {}
node Service2 {}

---

(source_file
  (node_definition
    kind: (fqmn
      (identifier))
    (block))
  (node_definition
    kind: (fqmn
      (identifier))
    (block)))

==================
Match Statement
==================
node Test {
  query test: grammars.unknown = `(key) @k`
  match test {}
}

---

(source_file
  (node_definition
    kind: (fqmn
      (identifier))
    (block
      (query_definition
        name: (identifier)
        grammar: (fqmn
          (identifier)
          (identifier))
        value: (query_literal
          content: (raw_content)))
      (match_stmt
        query: (identifier)
        (match_block)))))

==================
Extern Declaration
==================

#builtin
extern {
  isPascalCase  name: builtin.str -> Diagnostic?

  validateGrammarName  name: String -> Diagnostic?

  operator /  left: String, right: String -> String
}

---

(source_file
  (extern_definition
    (attribute
      (identifier))
    (extern_block
      (extern_def_fn
        (identifier)
        (extern_def_arg
          (identifier)
          (type_annotation
            (type_identifier
              (fqmn
                (identifier)
                (identifier)))))
        (extern_return
          (type_annotation
            (type_identifier
              (fqmn
                (identifier))))))
      (extern_def_fn
        (identifier)
        (extern_def_arg
          (identifier)
          (type_annotation
            (type_identifier
              (fqmn
                (identifier)))))
        (extern_return
          (type_annotation
            (type_identifier
              (fqmn
                (identifier))))))
      (extern_def_fn
        (operator_identifier)
        (extern_def_arg
          (identifier)
          (type_annotation
            (type_identifier
              (fqmn
                (identifier)))))
        (extern_def_arg
          (identifier)
          (type_annotation
            (type_identifier
              (fqmn
                (identifier)))))
        (extern_return
          (type_annotation
            (type_identifier
              (fqmn
                (identifier)))))))))

==================
Extern Declaration Core
==================

extern {
  operator /  left: String, right: String -> String
}


---

(source_file
  (extern_definition
    (extern_block
      (extern_def_fn
        (operator_identifier)
        (extern_def_arg
          (identifier)
          (type_annotation
            (type_identifier
              (fqmn
                (identifier)))))
        (extern_def_arg
          (identifier)
          (type_annotation
            (type_identifier
              (fqmn
                (identifier)))))
        (extern_return
          (type_annotation
            (type_identifier
              (fqmn
                (identifier)))))))))

==================
Import Declaration
==================

import std.lint

---

(source_file
  (import_definition
    (fqmn
      (identifier)
      (identifier))))

==================
Query Declaration
==================

query QueryDefPattern: grammars.unknown = `
    (query_definition
        name: (identifier) @query_name
        value: (query_literal
            (raw_content) @query_body
        )
    ) @query_def
`

---

(source_file
  (query_definition
    (identifier)
    (fqmn
      (identifier)
      (identifier))
    (query_literal
      (raw_content))))

==================
Nginx hello world
==================

import std.fs 

query includePattern: grammars.nginx = `include (string)@path;`

node IncludeDirective {
  match includePattern {
    @path {
      global -> std.fs.resolve_glob $CURRENT_FILE @path.text
    }
  }
}

---

(source_file
  (import_definition
    (fqmn
      (identifier)
      (identifier)))
  (query_definition
    (identifier)
    (fqmn
      (identifier)
      (identifier))
    (query_literal
      (raw_content)))
  (node_definition
    (fqmn
      (identifier))
    (block
      (match_stmt
        (identifier)
        (match_block
          (capture
            (variable)
            (capture_block
              (graph_bind
                (graph_left_statements
                  (identifier))
                (relation)
                (graph_right_statements
                  (call_func
                    (fqmn
                      (identifier)
                      (identifier)
                      (identifier))
                    (variable)
                    (variable
                      (property_access))))))))))))

==================
Fact Declaration
==================

fact Node {  
  #auto_id
  file_path: String where std.fs.is_path it
  text: String
  start_byte: Int where it in [0..]
  end_byte: Int where it in [start_byte..]
  tags: List (String where it in ["sale", "new", "deprecated"])
}
---

(source_file
  (fact_definition
    (identifier)
    (fact_field_definition
      (attribute
        (identifier))
      (identifier)
      (type_annotation
        (type_identifier
          (fqmn
            (identifier)))
        (refinement
          (fqmn
            (identifier)
            (identifier)
            (identifier))
          (it))))
    (fact_field_definition
      (identifier)
      (type_annotation
        (type_identifier
          (fqmn
            (identifier)))))
    (fact_field_definition
      (identifier)
      (type_annotation
        (type_identifier
          (fqmn
            (identifier)))
        (refinement
          (it)
          (in_expression
            (range
              (number))))))
    (fact_field_definition
      (identifier)
      (type_annotation
        (type_identifier
          (fqmn
            (identifier)))
        (refinement
          (it)
          (in_expression
            (range
              (fqmn
                (identifier)))))))
    (fact_field_definition
      (identifier)
      (type_annotation
        (type_application
          (type_identifier
            (fqmn
              (identifier)))
          (type_annotation
            (type_identifier
              (fqmn
                (identifier)))
            (refinement
              (it)
              (in_expression
                (list_items
                  (string)
                  (string)
                  (string))))))))))

==================
Type Declaration
==================

type ParsableInt = String where std.is_int it
pub(pkg) type ListPositiveInt = List (i64 where it > 0)
pub type Something = i64 where std.math.is_positive (std.math.add it 10)
#wit-compatible
#export
type A = { x: Int y: { z: ParsableInt w: List (i64 where it > 0) } }

---

(source_file
  (type_declaration
    (identifier)
    (type_definition
      (type_annotation
        (type_identifier
          (fqmn
            (identifier)))
        (refinement
          (fqmn
            (identifier)
            (identifier))
          (it)))))
  (type_declaration
    (pub)
    (identifier)
    (type_definition
      (type_annotation
        (type_application
          (type_identifier
            (fqmn
              (identifier)))
          (type_annotation
            (type_identifier
              (fqmn
                (identifier)))
            (refinement
              (it)
              (operator_identifier)
              (number)))))))
  (type_declaration
    (pub)
    (identifier)
    (type_definition
      (type_annotation
        (type_identifier
          (fqmn
            (identifier)))
        (refinement
          (fqmn
            (identifier)
            (identifier)
            (identifier))
          (parenthesized_expression
            (fqmn
              (identifier)
              (identifier)
              (identifier))
            (it)
            (number))))))
  (type_declaration
    (attribute
      (identifier))
    (attribute
      (identifier))
    (identifier)
    (type_definition
      (type_field_definition
        (identifier)
        (type_definition
          (type_annotation
            (type_identifier
              (fqmn
                (identifier))))))
      (type_field_definition
        (identifier)
        (type_definition
          (type_field_definition
            (identifier)
            (type_definition
              (type_annotation
                (type_identifier
                  (fqmn
                    (identifier))))))
          (type_field_definition
            (identifier)
            (type_definition
              (type_annotation
                (type_application
                  (type_identifier
                    (fqmn
                      (identifier)))
                  (type_annotation
                    (type_identifier
                      (fqmn
                        (identifier)))
                    (refinement
                      (it)
                      (operator_identifier)
                      (number))))))))))))

==================
Edge Declaration
==================

edge Includes = File -> File
---

(source_file
  (edge_definition
    (identifier)
    (type_identifier
      (fqmn
        (identifier)))
    (relation)
    (type_identifier
      (fqmn
        (identifier)))))
